@@ -78,6 +78,8 @@ v2.1.0 (XXXX-XX-XX)
 v2.0.6 (XXXX-XX-XX)
 -------------------
 
+* fixed issue #826: Replication fails when a collection's configuration changes
+
 * fixed issue #835: arangosh doesn't show correct database name
 
 
